--- a/configs/default_multi_gpu.yaml
+++ b/configs/default_multi_gpu.yaml
@@ -31,7 +31,7 @@ data:
     data_root: data/
     prefix: train
     suffix: .pth
-    training: True
+    training: False # not use augmentation
     mode: 4
     aug: False
     with_elastic: False
